--- a/style.css
+++ b/style.css
@@ -33,15 +33,36 @@ header span {
 
 header .navegacao-primaria {
     display: flex;
-    gap: 10px;
+    gap: 30px;
     align-items: center;
 }
 
 header .navegacao-primaria li a {
-    padding: 10px;
     color: #fff;
+    width: 0px;
+    height: 0px;
     font-size: 1.3rem;
 }
+
+header .navegacao-primaria li a::after {
+    content: '';
+    width: 10px;
+    height: 0px;
+    display: block;
+    border-bottom: 4px solid transparent;
+    transition: .9s;
+  
+}
+
+header .navegacao-primaria li a:hover::after {
+    width: 100%;
+    height: 0px;
+    padding: 0px;
+    display: block;
+    border-bottom: 4px solid #35b5dc;
+  
+}
+
 
 /* download CV*/
 .section-div {
@@ -271,6 +292,10 @@ main .sobre {
         background-size: cover;
     
       }
+      header {
+        justify-content: space-between;
+        padding: 30px 70px;
+      }
       
       header .navegacao-primaria {
         display: none;
@@ -279,6 +304,21 @@ main .sobre {
       header i {
         color: #f7f7f7;
         font-size: 3rem;
+      }
+
+      header .navegacao-primaria.ativado {
+        background: linear-gradient(rgba(43, 42, 42, 0.176), rgba(46, 46, 46, 0.724));
+        position: absolute;
+        display: grid;
+        top: 80px;
+        color: white;
+        z-index: 1;
+        padding: 30px;
+        font-size: 1.6rem;
+        font-weight: bold;
+        border-radius: 0 0 4px 4px;
+        right: 20px;
+        animation: sobeSecao 8.s ease-in-out forwards;
       }
 
 
@@ -300,7 +340,7 @@ main .sobre {
 
 .services {
     margin-top: -30px;
-    background-color: #151515;
+    background-color: #000;
     padding: 60px;
 
 }
